[gd_scene load_steps=13 format=3 uid="uid://yyenrdmatgy0"]

[ext_resource type="PackedScene" uid="uid://b3r45kypfcy2u" path="res://scenes/player.tscn" id="1_yt1ie"]
[ext_resource type="PackedScene" uid="uid://bdwf8kr1c001" path="res://scenes/analog_stick.tscn" id="2_oj3va"]
[ext_resource type="Script" uid="uid://605eqxdl1ftw" path="res://scripts/game_manager.gd" id="3_dkyex"]
[ext_resource type="Texture2D" uid="uid://cv8agjv5mm4kx" path="res://assets/scenes/background_forest.png" id="4_flxam"]
[ext_resource type="Script" uid="uid://c601icsmutqb1" path="res://scripts/parallax_background.gd" id="4_parallax"]

[sub_resource type="TileSet" id="TileSet_8n50p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwp8l"]
bg_color = Color(0.647059, 0.137255, 0.137255, 0.25098)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.788235, 0.270588, 0.270588, 0.501961)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfduh"]
bg_color = Color(0, 0, 0, 0.352941)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.788235, 0.270588, 0.270588, 0.196078)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qnk1"]
bg_color = Color(0.913725, 0.466667, 0.466667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.972549, 0.603922, 0.603922, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.768627, 0.223529, 0.223529, 0.156863)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxmjo"]
bg_color = Color(0.913725, 0.556863, 0.435294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.972549, 0.701961, 0.580392, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrn1r"]
bg_color = Color(0.172549, 0.0705882, 0.0313726, 0.901961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.803922, 0.172549, 0.113725, 0.686275)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.427451)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wc1ot"]
bg_color = Color(0.803922, 0.172549, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.984314, 0.639216, 0.486275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.352941)
shadow_size = 4
shadow_offset = Vector2(0, 3)

[node name="Game" type="Node2D"]
script = ExtResource("3_dkyex")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("4_parallax")

[node name="FarLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(3000, 3000)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/FarLayer"]
modulate = Color(0.8, 0.8, 0.9, 1)
scale = Vector2(3, 3)
texture = ExtResource("4_flxam")

[node name="MidLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(3000, 3000)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/MidLayer"]
modulate = Color(0.9, 0.9, 1, 0.8)
position = Vector2(400, 300)
scale = Vector2(3, 3)
texture = ExtResource("4_flxam")

[node name="CloseLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(3000, 3000)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/CloseLayer"]
modulate = Color(1, 1, 1, 0.7)
position = Vector2(-500, -400)
scale = Vector2(3, 3)
texture = ExtResource("4_flxam")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8n50p")
collision_visibility_mode = 1
format = 2
layer_0/name = "Ground"

[node name="Player" parent="." instance=ExtResource("1_yt1ie")]

[node name="Camera2D2" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnalogStick" parent="CanvasLayer" instance=ExtResource("2_oj3va")]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopPanel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vwp8l")

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 15.0
offset_right = 153.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qfduh")
theme_override_styles/fill = SubResource("StyleBoxFlat_4qnk1")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="CanvasLayer/HUD/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -13.0
offset_right = 49.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.94902, 0.94902, 1)
theme_override_colors/font_shadow_color = Color(0.662745, 0.141176, 0.141176, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "HP: 100/100"
horizontal_alignment = 1

[node name="TimePanel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -173.0
offset_top = 14.0
offset_right = -23.0
offset_bottom = 36.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qfduh")

[node name="TimeLabel" type="Label" parent="CanvasLayer/HUD/TimePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -13.0
offset_right = 36.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.647059, 0.647059, 1)
theme_override_colors/font_shadow_color = Color(0.662745, 0.141176, 0.141176, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "60:00"
horizontal_alignment = 1

[node name="BottomPanel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vwp8l")

[node name="LevelLabel" type="Label" parent="CanvasLayer/HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -26.5
offset_right = 43.0
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972549, 0.647059, 0.647059, 1)
theme_override_colors/font_shadow_color = Color(0.662745, 0.141176, 0.141176, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Level: 1"
horizontal_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -34.0
offset_right = -20.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_qfduh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vxmjo")
max_value = 1.0
value = 0.3
show_percentage = false

[node name="GameOverOverlay" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.0235294, 0.0235294, 0.85098)

[node name="Panel" type="Panel" parent="CanvasLayer/GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrn1r")

[node name="DeathMessage" type="Label" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 50.0
offset_right = 172.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.980392, 0.419608, 0.419608, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.0156863, 0.0156863, 0.709804)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 48
text = "YOU DIED"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -33.0
offset_right = 191.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0.858824, 0.831373, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.0156863, 0.0156863, 0.709804)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="ReturnToMenuButton" type="Button" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.94902, 0.94902, 1)
theme_override_colors/font_pressed_color = Color(1, 0.827451, 0.827451, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_wc1ot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wc1ot")
theme_override_styles/normal = SubResource("StyleBoxFlat_wc1ot")
text = "Return to Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="analog_motion" from="CanvasLayer/AnalogStick" to="Player" method="set_analog_motion"]
[connection signal="analog_released" from="CanvasLayer/AnalogStick" to="Player" method="set_analog_motion" binds= [Vector2(0, 0)]]
[connection signal="pressed" from="CanvasLayer/GameOverOverlay/Panel/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
